--- a/workflows/sync_to_azure.yml
+++ b/workflows/sync_to_azure.yml
@@ -3,11 +3,11 @@ name: Sync to Azure DevOps
 on:
   push:
     branches:
-      - main  # Trigger the workflow on pushes to the main branch
+      - master  # Trigger the workflow on pushes to the main branch
 
 jobs:
   sync:
-    runs-on: ubuntu-latest  # Run the job on an Ubuntu Linux runner
+    runs-on: windows-latest  # Run the job on an Ubuntu Linux runner
 
     steps:
     - name: Checkout code
@@ -15,7 +15,7 @@ jobs:
 
     - name: Push to Azure DevOps
       run: |
-        git remote add azure https://dev.azure.com/yourorganization/yourproject/_git/yourrepository
+        git remote add azure https://dev.azure.com/DannyTechWorks/DannyProject/_git/DannyProject
         git push azure ${GITHUB_REF#refs/heads/}:refs/heads/${GITHUB_REF#refs/heads/} --force
       env:
         AZURE_PERSONAL_ACCESS_TOKEN: ${{ secrets.AZURE_DEVOPS_PAT }}
