--- a/BlogSystem/BlogSystem.MVCSite/BlogSystem.MVCSite.csproj
+++ b/BlogSystem/BlogSystem.MVCSite/BlogSystem.MVCSite.csproj
@@ -832,6 +832,9 @@
     <Content Include="Views\Shared\_ArticleList.cshtml" />
     <Content Include="Views\Shared\_SearchResult.cshtml" />
     <Content Include="Views\Article\ArticleListContainer.cshtml" />
+    <Content Include="Views\User\UserProfile.cshtml" />
+    <Content Include="Views\Shared\_NotFound.cshtml" />
+    <Content Include="Views\Shared\_Footer.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
