--- a/.github/workflows/master_danny-portfolio.yml
+++ b/.github/workflows/master_danny-portfolio.yml
@@ -25,8 +25,11 @@ jobs:
         uses: NuGet/setup-nuget@v1.0.5
 
       - name: Restore NuGet packages
-        run: nuget restore
+        run: nuget restore BlogSystem.sln
 
+      - name: Build project
+        run: msbuild BlogSystem.sln /p:Configuration=Release
+        
       - name: Publish to folder
         run: msbuild /nologo /verbosity:m /t:Build /t:pipelinePreDeployCopyAllFilesToOneFolder /p:_PackageTempDir="\published\"
 
