--- a/.github/workflows/master_danny-portfolio.yml
+++ b/.github/workflows/master_danny-portfolio.yml
@@ -25,7 +25,7 @@ jobs:
         uses: NuGet/setup-nuget@v1.0.5
 
       - name: Restore NuGet packages
-        run: nuget restore BlogSystem.sln
+        run: nuget restore BlogSystem/BlogSystem.sln
       
       - name: Build project
         run: msbuild BlogSystem.sln /p:Configuration=Release
