--- a/BlogSystem/BlogSystem.BLL/BlogSystem.BLL.csproj
+++ b/BlogSystem/BlogSystem.BLL/BlogSystem.BLL.csproj
@@ -60,6 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ArticleManager.cs" />
+    <Compile Include="LruCache.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserManager.cs" />
   </ItemGroup>
