--- a/BlogSystem/BlogSystem.MVCSite/bin/BlogSystem.MVCSite.dll.config
+++ b/BlogSystem/BlogSystem.MVCSite/bin/BlogSystem.MVCSite.dll.config
@@ -61,11 +61,9 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <!--<add name="con" connectionString="server=.\SQLEXPRESS;database= SecondBlogSystem;uid=sa;pwd=sa" providerName="system.data.SqlClient" />-->
+    <add name="con" connectionString="server=.\SQLEXPRESS;database= SecondBlogSystem;uid=sa;pwd=sa" providerName="system.data.SqlClient" />
 	  <!--<add name="con" connectionString="Server=tcp:danny-database-server.database.windows.net,1433;Initial Catalog=BlogDB;Persist Security Info=False;User ID=Jiema_Danny;Password=Zhb290798466@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;" />-->
-	  <add name="con"
-	 connectionString="Server=tcp:danny-database-server.database.windows.net,1433;Initial Catalog=BlogDB;Persist Security Info=False;User ID=Jiema_Danny;Password=Zhb290798466@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
-	 providerName="System.Data.SqlClient" />
+	  <!--<add name="con" connectionString="Server=tcp:danny-database-server.database.windows.net,1433;Initial Catalog=BlogDB;Persist Security Info=False;User ID=Jiema_Danny;Password=Zhb290798466@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;" providerName="System.Data.SqlClient" />-->
   </connectionStrings>                             
 	<entityFramework>
     <providers>
