--- a/.github/workflows/master_danny-portfolio.yml
+++ b/.github/workflows/master_danny-portfolio.yml
@@ -33,10 +33,8 @@ jobs:
       - name: Publish to folder
         run: |
           mkdir publish
-          msbuild BlogSystem/BlogSystem.MVCSite/BlogSystem.MVCSite.csproj ^
-            /p:DeployOnBuild=true ^
-            /p:Configuration=Release ^
-            /p:PublishDir=publish
+          msbuild BlogSystem/BlogSystem.MVCSite/BlogSystem.MVCSite.csproj /p:DeployOnBuild=true /p:Configuration=Release /p:PublishDir=publish
+
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
