--- a/.github/workflows/master_danny-portfolio.yml
+++ b/.github/workflows/master_danny-portfolio.yml
@@ -75,5 +75,5 @@ jobs:
         with:
           app-name: 'danny-portfolio'
           slot-name: 'Production'
-          package: publish/
+          package: .
           
