--- a/.github/workflows/master_danny-portfolio.yml
+++ b/.github/workflows/master_danny-portfolio.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy ASP app to Azure Web App - danny-portfolio
 
 on:
@@ -13,10 +10,11 @@ jobs:
   build:
     runs-on: windows-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read # This is required for actions/checkout
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Setup MSBuild path
         uses: microsoft/setup-msbuild@v1.0.2
@@ -26,19 +24,16 @@ jobs:
 
       - name: Restore NuGet packages
         run: nuget restore BlogSystem/BlogSystem.sln
-      
+
       - name: Build solution
         run: msbuild BlogSystem/BlogSystem.sln /p:Configuration=Release
 
       - name: Publish to folder
         run: |
           msbuild BlogSystem/BlogSystem.MVCSite/BlogSystem.MVCSite.csproj `
-            /p:DeployOnBuild=true `
-            /p:PublishProfile=FolderProfile `
             /p:Configuration=Release `
             /p:PublishDir=publish
         shell: pwsh
-
 
       - name: Check publish folder content
         run: dir publish
@@ -49,8 +44,6 @@ jobs:
           name: ASP-app
           path: publish/
 
-        
-
   deploy:
     runs-on: windows-latest
     needs: build
@@ -58,15 +51,15 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write # This is required for requesting the JWT
+      contents: read # This is required for actions/checkout
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: ASP-app
-      
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -80,4 +73,4 @@ jobs:
         with:
           app-name: 'danny-portfolio'
           slot-name: 'Production'
-          package: publish/
+          package: ASP-app/publish/ # Artifact 下载后通常会在一个以 artifact 名称命名的文件夹下
