--- a/.github/workflows/master_danny-portfolio.yml
+++ b/.github/workflows/master_danny-portfolio.yml
@@ -31,13 +31,14 @@ jobs:
       - name: Publish to folder
         run: |
           msbuild BlogSystem/BlogSystem.MVCSite/BlogSystem.MVCSite.csproj `
+            /p:DeployOnBuild=true `
             /p:Configuration=Release `
             /p:PublishDir=publish
         shell: pwsh
-
+      
       - name: Check publish folder content
         run: dir publish
-
+      
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
