--- a/.github/workflows/master_danny-portfolio.yml
+++ b/.github/workflows/master_danny-portfolio.yml
@@ -40,6 +40,7 @@ jobs:
       
       - name: Check publish folder content
         run: dir publish
+        working-directory: BlogSystem/BlogSystem.MVCSite
       
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
